CreateSheet : Alignement correct des caracteristiques avec leur input (+ de width)
GmToolBar + Npcs + SendDocs : améliorations globale de l'UI pour mobile

--- a/src/components/CreateSheet/CreateSheet.scss
+++ b/src/components/CreateSheet/CreateSheet.scss
@@ -239,7 +239,7 @@
       justify-content: space-between;
       align-items: baseline;
       gap: $spacing-small;
-      width: 185px;
+      width: 210px;
     }
 
     input {
